Injected Random to make behaviour deterministic in tests